Modification du footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,7 @@
     </main>
     
     <footer>
+        <p>&copy; 2023 Grabr. Tous droits réservés</p>
         <div class="social-media-links">
             <!-- Social media links will go here -->
         </div>
